fix: adjust logo-fixed position in nav-bar for better alignment

--- a/src/query.scss
+++ b/src/query.scss
@@ -60,7 +60,7 @@
 
   .nav-bar .logo-fixed {
     position: fixed;
-    top: 0.8rem;
+    top: -1rem;
     left: 1.5rem;
     display: flex;
     align-items: center;
